--- a/src/components/ChatWindow.css
+++ b/src/components/ChatWindow.css
@@ -79,7 +79,7 @@
 }
 
 .message.bot-message {
-  background: #f4f6fa;
+  background: #e9ecef;
   color: #222;
   align-self: flex-start;
   margin-right: auto;
