update UI colors

--- a/src/components/CompatibilityChecker.css
+++ b/src/components/CompatibilityChecker.css
@@ -36,7 +36,7 @@
 
 .model-number {
   font-size: 14px;
-  color: #2c88aa;
+  color: #337778;
   font-weight: 500;
   margin-left: 16px;
   white-space: nowrap;
